--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Mini Project 1</title>
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="gallery.html">GALLERY</a>
+    </nav>
 </body>
 </html>
