--- a/about.html
+++ b/about.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link name="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Mini Project 1</title>
 </head>
 <body>
-    <nav>
+    <div class="navbar">
+        <div>
+            <h1>TIM HENSON</h1>
+        </div>
+        <div>
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="gallery.html">GALLERY</a>
-    </nav>
+        </div>
+    </div>
 </body>
 </html>
