--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Mini Project 1</title>
 </head>
 <body>
-    
+    <!--NAV BAR-->
     <div class="navbar">
         <div>
-            <h1>TIM HENSON</h1>
+            <h1 class="nav">TIM HENSON</h1>
         </div>
         <div>
         <a href="index.html">HOME</a>
@@ -20,6 +20,21 @@
         </div>
     </div>
 
-
+    <!--ABOUT SECTION-->
+    <div class="home">
+        <div>
+            <img src="images/thumbnail_image0.jpg">
+        </div>
+        <div class="aboutBox">
+            <h1>Welcome to my mini project!</h1>
+            <p>Hi, I'm Lauren! My mini project is about Tim Henson, my boyfriend's favorite guitarist from a band called Polyphia.
+                Not a lot of people know who Tim Henson is, but I think he's super innovative in his guitar style.
+                This website will tell you the basics about Tim Henson! 
+            </p>
+            <a href="about.html">Learn about Tim Henson</a>
+            <br>
+            <a href="about.html">View gallery</a>
+        </div>
+    </div>
 </body>
 </html>
