--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <div>
-            <h1>TIM HENSON</h1>
+            <h1 class="nav">TIM HENSON</h1>
         </div>
         <div>
         <a href="index.html">HOME</a>
