added about content

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <title>Mini Project 1</title>
 </head>
 <body>
+
+    <!--NAVIGATION-->
     <div class="navbar">
         <div>
             <h1 class="nav">TIM HENSON</h1>
@@ -16,6 +18,35 @@
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="gallery.html">GALLERY</a>
+        </div>
+    </div>
+
+    <!--CONTENT-->
+    <div class="contentBox">
+        <div>
+            <h1>WHO IS TIM HENSON?</h1>
+            <p>Tim Henson is an American guitarist. He was born in Texas on Nov 19, 1993.</p>
+        </div>
+        <div>
+            <h1>WHAT DOES TIM HENSON DO?</h1>
+            <p>Tim started the band Polyphia in 2010. Today, the band has 1.2 million monthly listeners.</p>
+            <p>He also colaborates with other musicians such as Trippie Redd and Baby Metal.</p>
+            <p>Recently, Tim has partenered with Ibanez to release a limited edition guitar.</p>
+        </div>
+        <div>
+            <h1>WHAT STYLE OF MUSIC DOES TIM HENSON PLAY?</h1>
+            <p>Tim Henson is an innovative guitarist, so it is hard to categorize his style. He is inspired by math rock, metal, jazz, 
+                rap, and more. Polyphia is considered a progressive rock band.
+            </p>
+        </div>
+        <div>
+            <h1>MY RECOMMENDATIONS</h1>
+            <p>Here are a few Polyphia songs I enjoy:</p>
+            <ul>
+                <li><a href="https://open.spotify.com/track/4LoIgQo8l6wxTnRTOL1lvL?si=6c1f0be210184e41">Saucy</a></li>
+                <li><a href="https://open.spotify.com/track/3nBGFgfRQ8ujSmu5cGlZIU?si=896ed20d1fe4453c">Playing God</a></li>
+                <li><a href="https://open.spotify.com/track/2v7iJcMoQcN40fK9XEb42q?si=aa27db6f009f4ca4">Goose</a></li>
+            </ul>
         </div>
     </div>
 </body>
