--- a/about.html
+++ b/about.html
@@ -23,23 +23,23 @@
 
     <!--CONTENT-->
     <div class="contentBox">
-        <div>
+        <div class="contentPiece">
             <h1>WHO IS TIM HENSON?</h1>
             <p>Tim Henson is an American guitarist. He was born in Texas on Nov 19, 1993.</p>
         </div>
-        <div>
+        <div class="contentPiece">
             <h1>WHAT DOES TIM HENSON DO?</h1>
             <p>Tim started the band Polyphia in 2010. Today, the band has 1.2 million monthly listeners.</p>
             <p>He also colaborates with other musicians such as Trippie Redd and Baby Metal.</p>
             <p>Recently, Tim has partenered with Ibanez to release a limited edition guitar.</p>
         </div>
-        <div>
+        <div class="contentPiece">
             <h1>WHAT STYLE OF MUSIC DOES TIM HENSON PLAY?</h1>
             <p>Tim Henson is an innovative guitarist, so it is hard to categorize his style. He is inspired by math rock, metal, jazz, 
                 rap, and more. Polyphia is considered a progressive rock band.
             </p>
         </div>
-        <div>
+        <div class="contentPiece">
             <h1>MY RECOMMENDATIONS</h1>
             <p>Here are a few Polyphia songs I enjoy:</p>
             <ul>
