added gallery content

--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <title>Mini Project 1</title>
 </head>
 <body>
+    <!--NAVIGATION-->
     <div class="navbar">
         <div>
             <h1 class="nav">TIM HENSON</h1>
@@ -16,6 +17,24 @@
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="gallery.html">GALLERY</a>
+        </div>
+    </div>
+
+    <!--GALLERY CONTENT-->
+    <div class="gallery">
+        <div>
+            <h1>Check out Polyphia and Tim's instagrams for more photos and videos!</h1>
+            <a href="https://www.instagram.com/polyphia/?hl=en">@polyphia</a>
+            <a href="https://www.instagram.com/thew6rst/?hl=en">@thew6rst</a>
+        </div>
+        <div>
+            <img src="images/pinksweater.webp">
+        </div>
+        <div>
+            <img src="images/thumbnail_image1.jpg">
+        </div>
+        <div>
+            <img src="images/screenshot.png">
         </div>
     </div>
 </body>
