styled gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -22,18 +22,18 @@
 
     <!--GALLERY CONTENT-->
     <div class="gallery">
-        <div>
+        <div class="galleryPiece">
             <h1>Check out Polyphia and Tim's instagrams for more photos and videos!</h1>
-            <a href="https://www.instagram.com/polyphia/?hl=en">@polyphia</a>
+            <a href="https://www.instagram.com/polyphia/?hl=en">@polyphia&nbsp;</a>
             <a href="https://www.instagram.com/thew6rst/?hl=en">@thew6rst</a>
         </div>
-        <div>
-            <img src="images/pinksweater.webp">
-        </div>
-        <div>
+        <div class="galleryPiece">
             <img src="images/thumbnail_image1.jpg">
         </div>
-        <div>
+        <div class="galleryPiece">
+            <img src="https://i.ytimg.com/vi/7_cXxEbR_pA/maxresdefault.jpg">
+        </div>
+        <div class="galleryPiece">
             <img src="images/screenshot.png">
         </div>
     </div>
